# math

./: half-derivative.js  ogl.cpp  ogl.scratchish.latex  ogl2.js  ogl3.js
OGL/goglm4z3/: goglm4z3.cabal
OGL/goglm4z3/.stack-work/install/x86_64-linux-nopie/lts-8.2/8.0.2/flag-cache/: MonadRandom-0.5.1-IY6HiWu00vQLARukQW3KMH  asn1-encoding-0.9.4-8fW4ahGndpFJHg9uNjXVSG  asn1-parse-0.9.4-3X4uUYxpArcAZxrNpa4bMX  asn1-types-0.3.2-IaUfgwDM8aq6EviQzJfcYl  async-2.1.1-4n6HEMPJR2eJK0JpvCfuPK  base16-bytestring-0.1.1.6-4E2p94lTx8gIceMhu8Kl9o  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  bson-0.3.2.3-6TVFsjI2YaoGJaxBTO3mxM  byteable-0.1.1-2lU1pexQSLj1KbNO17UifQ  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  cipher-aes-0.2.11-3HdRtXPgwdeKoWS00cJC1B  cprng-aes-0.6.1-14PvUZSiyviAGgivMs9YbY  crypto-cipher-types-0.0.9-3zKqNO1unVkHfrloBpc5t2  crypto-random-0.0.9-1B1Hz6FFbwB4D0JauBThiD  cryptohash-0.11.9-Le2Hklk7mj3DLrDWexNpXb  cryptonite-0.21-BpO3rZu57xu84Yfxwqkb5K  data-binary-ieee754-0.4.4-7iiF2mP1jcB6tVSPgIyBOi  data-default-class-0.1.2.0-GsXqKN6o1X9jr0fF5qCVD  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  goglm4z3-0.1.0.0-DHtFJQRhUnC29wJWQ3IQXH  goglm4z3-0.1.0.0-PpXcM9zhE76KpKQN4wcQN  hashable-1.2.5.0-F4MWeNuv2sjJRqBd2T5ul4  hashtables-1.2.1.0-Gn8SuLgl5kj6IL9Wq6eBAx  hourglass-0.2.10-pnbvWmzfcY1rOFETQEmcY  lifted-base-0.2.3.10-BoEavBFIcriDza63doCjS2  loop-0.3.0-4tGn4RSY02pFTwJ5L4CYRr  matrix-0.3.5.0-eFZR6K8Lax4OrNeuTQF4y  memory-0.14.1-J8LClTQE9ts1CQQG3Fd7ul  monad-control-1.0.1.0-LQwQ0Hi5p0oAccTfTzbfD5  mongoDB-2.1.1.1-LFTb5vkmQLW9rrZs6f6K0P  (+15 more)
OGL/goglm4z3/app/: Main.hs
OGL/goglm4z3/src/: DataBase.hs  Function.hs
(+1571 files in other folders)
