name:                goglm4z3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/goglm4z3#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Function
                     , DataBase
  build-depends:       base >= 4.7 && < 5
                     , word24 >= 2.0.1
                     , mongoDB >= 2.1.1.1
                     , matrix >= 0.3.5.0
  default-language:    Haskell2010

executable goglm4z3-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , goglm4z3
                     , containers 
                     , word24 >= 2.0.1
                     , matrix >= 0.3.5.0
  default-language:    Haskell2010

test-suite goglm4z3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , goglm4z3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/goglm4z3
